Fixed header to have buttons always visible

--- a/ngx-admin/src/app/@theme/components/header/header.component.scss
+++ b/ngx-admin/src/app/@theme/components/header/header.component.scss
@@ -9,7 +9,16 @@
 
   .logo-container {
     display: flex;
-    width: calc(#{nb-theme(sidebar-width)} - #{nb-theme(header-padding)});
+    width: 20rem;
+  }
+
+  .logo-img {
+    width: 100%;
+  }
+
+  .buttons-container{
+    right: 20px;
+    position: absolute;
   }
 
   nb-action {
@@ -29,7 +38,7 @@
   .header-container {
     display: flex;
     align-items: center;
-    width: auto;
+    width: 100%;
 
     .sidebar-toggle {
       @include nb-ltr(padding-right, 1.25rem);
